# mouse-locomotor-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cli.py  dashboard.py  docker-compose.yml  main.py  process_scientific.py  pyproject.toml  requirements.txt  scientific_dashboard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: __init__.py  coordination.py  gait_cycles.py  kinematics.py  metrics.py  scientific_metrics.py  velocity.py
config/: analysis_params.yaml  markers_lateral.yaml  markers_ventral.yaml
docs/: API.md  INSTALLATION.md  METRICS.md  README.md  USER_GUIDE.md
export/: __init__.py  csv_exporter.py  json_exporter.py  report_generator.py  scientific_exporter.py  scientific_report.py
output/scientific_analysis/: DEMO001_report.json  DEMO001_report.md  DEMO001_report.tex
tests/: __init__.py  conftest.py  test_coordination.py  test_gait_cycles.py  test_integration.py  test_velocity.py
tracking/: __init__.py  dlc_adapter.py  marker_config.py  mock_tracker.py  track_processor.py  video_metadata.py
visualization/: __init__.py  circular_plots.py  dashboard.py  publication_figures.py  speed_plots.py  stick_figures.py  trajectory_overlay.py  video_generator.py
web/: export_web_data.py  index.html
web/assets/: tracking_data.json
